# hoshimi-dots

./: .gitignore  CMakeLists.txt  README.md  archpackages.txt  cmake_uninstall.cmake.in  hyprland-dots.desktop.in  install-bin  install.cpp  install.sh.in  installation.sh  pull.sh
.github/workflows/: cmake-single-platform.yml
GTK/: save.glade  save.glade~
assets/: palette.txt  watch.html
assets/osu/: !!!.txt  skin.ini  uNuE_uEuN.txt
catalyst/: config.json
config/: .zshrc  starship.toml
config/catalyst/: config.jsonc
config/cava/: config  config.backup
config/dunst/: dunstrc  dunstrc.backup
config/eww/: eww.scss  eww.scss.backup  eww.yuck
config/eww/widgets/: home.yuck  player.yuck
config/fastfetch/: config.jsonc
config/fish/: config.fish
config/ghostty/: config
config/ghostty/themes/: colorscheme
config/gtk-4.0/: settings.ini
config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf
config/hypr/extras/: autostart.conf  environment.conf
config/hypr/hyprland/: animations.conf  rules.conf
config/hypr/scripts/: movingscript.sh
config/quickshell/: .qmlls.ini  1  shell.qml
config/quickshell/Bar/: Audio.qml  Bar.qml  Bar.qml.backup  ClockWidget.qml  Cpu.qml  CpuWidget.qml  Memory.qml  MemoryWidget.qml  TaskbarWidget.qml  TaskbarWidget.qml.backup  Time.qml  VolumeWidget.qml  WorkspaceWidget.qml  WorkspaceWidget.qml.backup
config/quickshell/activatelinux/: Watermark.qml
config/quickshell/bar/: Bar.qml  Cava.qml  ClockWidget.qml  DesktopButtons.qml  MemoryWidget.qml  ScreenWrap.qml  TaskbarWidget.qml  TrayIcon.qml  TrayWidget.qml  VolumeWidget.qml  Window.qml  Windows.qml  WorkspaceItem.qml  WorkspacePopup.qml  WorkspaceWidget.qml
config/quickshell/bar/smallWidgets/: BatteryWidget.qml  ClockWidget.qml  VolumeWidget.qml
config/quickshell/bar/widgets/: BatteryWidget.qml  VolumeWidget.qml
config/quickshell/functions/: Colors.qml  Desktop.qml  Time.qml
config/quickshell/generics/: PopupBox.qml  Wallpaper.qml
config/quickshell/globals/: Variables.qml
config/quickshell/lockscreen/: LockContext.qml  LockSurface.qml
config/quickshell/modules/: Bar.qml  LockItem.qml
config/quickshell/notifications/: Content.qml  Notification.qml  Notifications.qml
config/quickshell/services/: Bar.qml  LockItem.qml  WallpaperItem.qml
config/quickshell/sources/: Audio.qml  Battery.qml  Desktop.qml  Memory.qml  Player.qml
config/starship/: starship.toml
config/vesktop/settings/: settings.json
config/vesktop/themes/: clearvision.theme.css  midnight.theme.css
config/waybar/: config.jsonc  style.css  style.css.backup
config/wofi/: config  style.css  style.css.backup
dotfiles/: .zshrc
dotfiles/.config/: starship.toml
dotfiles/.config/alacritty/: alacritty.toml
dotfiles/.config/alacritty/themes/: hoshimi.toml
dotfiles/.config/equibop/settings/: settings.json
dotfiles/.config/equibop/themes/: DarkNeon.theme.css  NotAnotherAnimeTheme.theme.css  Translucence.theme.css  glass_local.theme.css  gliss.theme.css  nothingcord.css  pyrite.theme.css
dotfiles/.config/fastfetch/: config.jsonc
dotfiles/.config/fish/: config.fish
dotfiles/.config/foot/: foot.ini
dotfiles/.config/ghostty/: config
dotfiles/.config/ghostty/shaders/: cursor_blaze.glsl  cursor_smear.glsl  cursor_smear_fade.glsl
dotfiles/.config/ghostty/themes/: hoshimi
dotfiles/.config/hoshimi/: config.json
dotfiles/.config/hoshimi/themes/: *.json  catppucin-frappe.json
dotfiles/.config/hypr/: hypridle.conf  hyprland.conf  hyprqt6engine.conf
dotfiles/.config/hypr/extras/: autostart.conf  environment.conf  secrets.conf
dotfiles/.config/hypr/hyprland/: animations.conf  keybinds.conf  rules.conf  style.conf
dotfiles/.config/hypr/scripts/: focus_vesktop.sh
dotfiles/.config/lf/: cleaner.sh  colors  icons  lfrc  preview.sh
dotfiles/.config/nvim/: init.lua  lazy-lock.json
dotfiles/.config/nvim/lua/: plugins.lua  vim-options.lua
dotfiles/.config/quickshell/: .qmlls.ini  Quickshell.md  shell.qml
dotfiles/.config/quickshell/bar/: Cava.qml  TrayIcon.qml  TrayWidget.qml  WindowItem.qml  Windows.qml  WorkspaceItem.qml  WorkspacePopup.qml  WorkspaceWidget.qml  cava
dotfiles/.zshrc.d/: aa-plugins.zsh  functions.zsh  options.zsh  zz-style.zsh
dotfiles/ghostty/themes/: colorscheme
dotfiles/hypr/extras/: monitors.conf
dotfiles/hypr/hyprland/: rules.conf
dotfiles/quickshell/background/: Clock.qml
dotfiles/quickshell/bar/: VolumeWidget.qml  WorkspaceItem.qml
dotfiles/quickshell/generics/: Wallpaper.qml
dotfiles/quickshell/sources/: ActivePlayer.sh
dunst/: dunstrc
eww/: custom.css  eww.scss  eww.yuck
eww/player/: eww.yuck  player.yuck
eww/widgets/: date-time.yuck  home.yuck  player.yuck
fastfetch/: config.jsonc
fastfetch/.config/fastfetch/: config.jsonc
fish/: config.fish
fish/.config/fish/: config.fish  fish_variables
ghostty/: config
ghostty/.config/ghostty/: config
ghostty/themes/: rimuru
gtk-4.0/: settings.ini
gtk-4.0/.config/gtk-4.0/: settings.ini
gui/: headers.hpp  main-gui.cpp
hypr/: hyprland.conf  hyprlock.conf
hypr/.config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
hypr/accessories/: hypridle.conf  hyprlock.conf
hypr/extras/: autostart.conf  environment.conf  monitors.conf
hypr/hyprland/: animations.conf  keybinds.conf  rules.conf
hypr/scripts/: script.sh  start_ssh_agent.sh
neovim/.config/nvim/: .luarc.json
nvim/: .luarc.json  init.lua
nvim/.config/nvim/: .luarc.json  init.lua  lazy-lock.json
nvim/lua/: vim-options.lua
nvim/lua/plugins/: catppuccin.lua  gitsigns.lua  lsp-config.lua  telescope.lua  trouble.lua
qt6/dots_manager/: main.cpp
scripts/: colorscheme.cpp  env.hpp  filey.hpp  input.hpp  install.cpp  main-cli.cpp  main.cpp  palette.hpp  points.cpp
starship/.config/: starship.toml
vesktop/settings/: settings.json
vesktop/themes/: DiscordPlus.theme.css  NotAnotherAnimeTheme.theme.css  Ocean.theme.css
waybar/: config.jsonc  style.css
waybar/.config/waybar/: config.jsonc  style.css
widgets/.config/eww/: eww.scss  eww.yuck
wofi/: config
wofi/.config/wofi/: config  style.css
(+178 files in other folders)
